--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "php-express": "0.0.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sql": "^0.72.0"
   }
 }
